# movies_etl

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  state.json.example
.github/workflows/: code-checker.yaml
etl/common/: decorators.py  manager.py  resources.py  storage.py
etl/models/: film_work.py  person.py
etl/postgres_to_es/: extract.py  load.py  transform.py
etl/settings/: const.py  es.py  pg.py  sql.py
